--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
     <section class="page-content">
         <header>
             <h1>Bienvenue sur mon portfolio.</h1>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta
-                debitis, facilis aliquam voluptates fugiat ipsum odio, nihil
-                architecto fuga laboriosam tempore necessitatibus quas? Incidunt nobis
-                ducimus vel, delectus sit quod Lorem ipsum dolor sit amet consectetur
-                adipisicing elit.
+            <p> J'ai commencé mes études au lycée François Rabelais à Douai ou j'ai obtenu mon BAC ARCU
+                (accueil-relation des clients et usagers) et je souhaite me réorienter vers le metier
+                de Designer UI/UX.
             </p>
             <button>Me contacter</button>
         </header>
@@ -42,6 +40,14 @@
 
 
     </section>
+
+    <footer>
+
+        <div class="colonne">
+            <h3>Adresse Mail</h3>
+            <p>claradanquigny1607@gmail.com</p>
+        </div>
+    </footer>
 
 
 </body>
