--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1>Bienvenue sur mon portfolio.</h1>
             <p> J'ai commencé mes études au lycée François Rabelais à Douai ou j'ai obtenu mon BAC ARCU
                 (accueil-relation des clients et usagers) et je souhaite me réorienter vers le metier
-                de Designer UI/UX.
+                de Designer UX.
             </p>
             <button>Me contacter</button>
         </header>
