--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="page-content">
         <header>
             <h1>Bienvenue sur mon portfolio.</h1>
-            <p> J'ai commencé mes études au lycée François Rabelais à Douai ou j'ai obtenu mon BAC ARCU
+            <p> J'ai commencé mes études au lycée François Rabelais à Douai où j'ai obtenu mon BAC ARCU
                 (accueil-relation des clients et usagers) et je souhaite me réorienter vers le metier
                 de Designer UX.
             </p>
